LocalizedComponent class created, used & working

--- a/src/playground-component/playground-component.html
+++ b/src/playground-component/playground-component.html
@@ -15,7 +15,6 @@
         <h1>A component</h1>
     </template>
     <script>
-        // Your new element extends the Polymer.Element base class
         class PlaygroundComponent extends Polymer.Element {
 
             constructor(){
@@ -25,7 +24,7 @@
 
             connectedCallback(){
                 super.connectedCallback();
-//                console.log("connectedCallback");
+//                console.log("connectedCallback called !");
 
             }
 
