--- a/src/playground-app/playground-app.html
+++ b/src/playground-app/playground-app.html
@@ -1,6 +1,7 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
 
 <link rel="import" href="../playground-component/playground-component.html">
+<link rel="import" href="../localized-component-demo/localized-component-demo.html">
 <link rel="import" href="../leaf-wrapper/leaf-wrapper.html">
 
 <link rel="import" href="../../bower_components/app-localize-behavior/app-localize-behavior.html">
@@ -16,8 +17,9 @@
         </style>
         <h2>Hello [[prop1]]!</h2>
         <br/>
-        <p>And under some localized content </p>
-        <h3>{{localize('hello', 'name', 'Batman')}}</h3>
+        <p>Localized content at the app level: {{localize('hello', 'name', 'Batman')}}</p>
+        <localized-component-demo></localized-component-demo>
+
         <playground-component></playground-component>
 
         <leaf-wrapper></leaf-wrapper>
@@ -28,7 +30,7 @@
          * @customElement
          * @polymer
          */
-        class PlaygroundApp extends Polymer.mixinBehaviors([Polymer.AppLocalizeBehavior], Polymer.Element) {
+        class PlaygroundApp extends LocalizedComponent{
             static get is() {
                 return 'playground-app';
             }
@@ -38,17 +40,8 @@
                     prop1: {
                         type: String,
                         value: 'playground-app'
-                    },
-                    language: {
-                        value: 'fr'
                     }
-
                 };
-            }
-
-            attached() {
-                let path = this.resolveUrl('./locales.json');
-                this.loadResources(path);
             }
         }
 
