--- a/src/playground-component/playground-component.html
+++ b/src/playground-component/playground-component.html
@@ -9,10 +9,12 @@
                 display: block;
 
                 padding: 16px;
+
+                background-color: red;
             }
         </style>
 
-        <h1>A component</h1>
+        <h3>A component output</h3>
     </template>
     <script>
         class PlaygroundComponent extends Polymer.Element {
