--- a/src/playground-app/playground-app.html
+++ b/src/playground-app/playground-app.html
@@ -13,13 +13,20 @@
                 display: block;
             }
         </style>
-        <h2>Affichage de la propriété prop1 : [[prop1]]!</h2>
-        <br/>
-        <button on-click="modifyArray"  >
-            Click me to push element in the array displayed below :)
+        <h2>Affichage de propriété</h2>
+        <p> Affichage de la propriété prop1 : [[prop1]]!</p>
+        <hr>
+        <h2>Array property observation </h2>
+        <button on-click="modifyArray">
+            Click me to push or set element in the array displayed below :)
         </button>
-        <playground-component arrayvalue="{{arrayProp}}" string-value="{{stringProp}}"></playground-component>
+        <playground-component arrayvalue="[[arrayprop]]" string-value="{{stringProp}}"></playground-component>
+
+        <hr>
+        <h2>Localised component demo</h2>
         <localized-component-demo></localized-component-demo>
+        <hr>
+        <h2>Leaflet wrapper demo</h2>
         <leaf-wrapper></leaf-wrapper>
 
     </template>
@@ -32,8 +39,6 @@
         class PlaygroundApp extends LocalizedComponent {
             constructor() {
                 super();
-                this.arrayProp = ['Apple', 'Banana'];
-                this.push('arrayProp', 'PushInConstructor');
                 this.stringProp = "bingo";
             }
 
@@ -46,20 +51,23 @@
                     prop1: {
                         type: String,
                         value: 'playground-app'
+                    },
+                    arrayprop: {
+                        type: Array,
+                        value: []
                     }
                 };
             }
 
-            modifyArray(event,  detail,  target){
-                console.log("in modifyArray");
-                this.push('arrayProp', ['ClickedOnce']);
+            modifyArray(event, detail, target) {
+                let rdnValue = Math.random() * 1000;
+                if (rdnValue > 500) {
+                    this.push('arrayprop', ['Pushed' + rdnValue]);
+                } else {
+                    this.set('arrayprop', ['Set' + rdnValue]);
+                }
             }
 
-            ready(){
-                super.ready();
-                this.push('arrayProp', 'PushInReady');
-
-            }
         }
 
         window.customElements.define(PlaygroundApp.is, PlaygroundApp);
